i screwed up my carousel while adding flex-wrap to the home page css. Fixed now

--- a/Project-1/css/stylesheet.css
+++ b/Project-1/css/stylesheet.css
@@ -321,6 +321,8 @@ button.active {
 .homecontainer section div {
     display: flex;
     width: 100vw;
+}
+.homecontainer > :last-child div{
     flex-wrap: wrap;
 }
 /*tv image source, note that the image doesn't seem to exist on the page, but google images found it anyways 
